--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@types/marked": "^4.3.0",
+		"marked": "^5.0.2",
 		"sveltekit-i18n": "^2.2.2"
 	}
 }
